# npm-depgraph-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
crawler/: cli.py  db.py  errors.py  fetch.py  loop.py  rate.py  seed.py  status.py  store.py
sql/: schema.sql
tests/: conftest.py  test_errors.py  test_loop_claim.py  test_loop_finalize.py  test_rate.py  test_seed.py  test_status.py  test_store.py
